hphp/test/zend/good/ext-standard-network/gethostbyname_error001.php
<?php
	var_dump(is_string(gethostbyname("192.168.0.101")));
?>