hphp/test/zend/bad/ext/mbstring/tests/zend_multibyte-04.php
<?php
var_dump(bin2hex("eXg"));
?>